[gd_scene load_steps=7 format=3 uid="uid://bk0j7r32h8gbp"]

[ext_resource type="Script" uid="uid://dt0nqlw8xxj51" path="res://scenes/knight_soldier/knight.gd" id="1_hh1w5"]
[ext_resource type="PackedScene" uid="uid://bxfbsy4vti0c3" path="res://scenes/archer_soldier/projectile.tscn" id="2_gpt1l"]
[ext_resource type="Texture2D" uid="uid://bapdtg5yblfru" path="res://assets/own/Cavaleiro.png" id="3_hwcit"]
[ext_resource type="Script" uid="uid://d3agcnh5m7evw" path="res://scenes/card/unplaceble.gd" id="4_hi3tu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oyb8r"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_ktyil"]
radius = 27.018513

[node name="Knight" type="Node2D"]
script = ExtResource("1_hh1w5")
projectile_scene = ExtResource("2_gpt1l")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_hwcit")

[node name="UnplacebleArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource("4_hi3tu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnplacebleArea"]
shape = SubResource("RectangleShape2D_oyb8r")

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_ktyil")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
